// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Manifest component > matches snapshot for manifest with errors 1`] = `
<DocumentFragment>
  <div
    class="card"
    id="manifest-text"
  >
    <div
      class="manifest-line"
      id="mpd-line-1"
    >
      <span
        class="line-num"
      >
        1
      </span>
      <pre
        class="text"
      >
        &lt;?xml version="1.0" encoding="UTF-8"?&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-2"
    >
      <span
        class="line-num"
      >
        2
      </span>
      <pre
        class="text"
      >
        &lt;MPD xmlns="urn:mpeg:dash:schema:mpd:2011"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-3"
    >
      <span
        class="line-num"
      >
        3
      </span>
      <pre
        class="text"
      >
             xmlns:cenc="urn:mpeg:cenc:2013"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-4"
    >
      <span
        class="line-num"
      >
        4
      </span>
      <pre
        class="text"
      >
             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-5"
    >
      <span
        class="line-num"
      >
        5
      </span>
      <pre
        class="text"
      >
             xsi:schemaLocation="urn:mpeg:dash:schema:mpd:2011 DASH-MPD.xsd"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-6"
    >
      <span
        class="line-num"
      >
        6
      </span>
      <pre
        class="text"
      >
             publishTime="2025-01-14T07:37:34Z"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-7"
    >
      <span
        class="line-num"
      >
        7
      </span>
      <pre
        class="text"
      >
             id="bbb"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-8"
    >
      <span
        class="line-num"
      >
        8
      </span>
      <pre
        class="text"
      >
            type="static"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-9"
    >
      <span
        class="line-num"
      >
        9
      </span>
      <pre
        class="text"
      >
            mediaPresentationDuration="PT9M51.458S"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-10"
    >
      <span
        class="line-num"
      >
        10
      </span>
      <pre
        class="text"
      >
          profiles="urn:mpeg:dash:profile:isoff-live:2011,urn:dvb:dash:profile:dvbdash:2014"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-11"
    >
      <span
        class="line-num"
      >
        11
      </span>
      <pre
        class="text"
      >
          minBufferTime="PT1.5S"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-12"
    >
      <span
        class="line-num"
      >
        12
      </span>
      <pre
        class="text"
      >
        &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-13"
    >
      <span
        class="line-num"
      >
        13
      </span>
      <pre
        class="text"
      >
         &lt;ProgramInformation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-14"
    >
      <span
        class="line-num"
      >
        14
      </span>
      <pre
        class="text"
      >
          &lt;Title&gt;Big Buck Bunny &lt;/Title&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-15"
    >
      <span
        class="line-num"
      >
        15
      </span>
      <pre
        class="text"
      >
         &lt;/ProgramInformation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-16"
    >
      <span
        class="line-num"
      >
        16
      </span>
      <pre
        class="text"
      >
         &lt;Location&gt;http://localhost:8765/dash/vod/bbb/hand_made.mpd&lt;/Location&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-17"
    >
      <span
        class="line-num"
      >
        17
      </span>
      <pre
        class="text"
      >
           &lt;Period start="PT0S" id="p0"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-18"
    >
      <span
        class="line-num"
      >
        18
      </span>
      <pre
        class="text"
      >
           &gt;&lt;BaseURL&gt;http://localhost:8765/dash/vod/bbb/&lt;/BaseURL&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-19"
    >
      <span
        class="line-num"
      >
        19
      </span>
      <pre
        class="text"
      >
             
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-20"
    >
      <span
        class="line-num"
      >
        20
      </span>
      <pre
        class="text"
      >
               &lt;AdaptationSet
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-21"
    >
      <span
        class="line-num"
      >
        21
      </span>
      <pre
        class="text"
      >
                 id="1"
      </pre>
    </div>
    <div
      class="manifest-line error"
      id="mpd-line-22"
    >
      <span
        class="line-num"
      >
        22
      </span>
      <pre
        class="text"
      >
                 mimeType="video/mp4"
      </pre>
      <p
        class="error-text"
      >
        AdaptationSet has an error
      </p>
    </div>
    <div
      class="manifest-line error"
      id="mpd-line-23"
    >
      <span
        class="line-num"
      >
        23
      </span>
      <pre
        class="text"
      >
                 contentType="video"
      </pre>
    </div>
    <div
      class="manifest-line error"
      id="mpd-line-24"
    >
      <span
        class="line-num"
      >
        24
      </span>
      <pre
        class="text"
      >
                 segmentAlignment="true"
      </pre>
    </div>
    <div
      class="manifest-line error"
      id="mpd-line-25"
    >
      <span
        class="line-num"
      >
        25
      </span>
      <pre
        class="text"
      >
                 startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line error"
      id="mpd-line-26"
    >
      <span
        class="line-num"
      >
        26
      </span>
      <pre
        class="text"
      >
                   maxWidth="1920"
      </pre>
    </div>
    <div
      class="manifest-line error"
      id="mpd-line-27"
    >
      <span
        class="line-num"
      >
        27
      </span>
      <pre
        class="text"
      >
                   maxHeight="1080"
      </pre>
    </div>
    <div
      class="manifest-line error"
      id="mpd-line-28"
    >
      <span
        class="line-num"
      >
        28
      </span>
      <pre
        class="text"
      >
                   maxFrameRate="24"
      </pre>
    </div>
    <div
      class="manifest-line error"
      id="mpd-line-29"
    >
      <span
        class="line-num"
      >
        29
      </span>
      <pre
        class="text"
      >
                   par="16:9"
      </pre>
    </div>
    <div
      class="manifest-line error"
      id="mpd-line-30"
    >
      <span
        class="line-num"
      >
        30
      </span>
      <pre
        class="text"
      >
                 &gt;
      </pre>
    </div>
    <div
      class="manifest-line error"
      id="mpd-line-31"
    >
      <span
        class="line-num"
      >
        31
      </span>
      <pre
        class="text"
      >
                 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-32"
    >
      <span
        class="line-num"
      >
        32
      </span>
      <pre
        class="text"
      >
          
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-33"
    >
      <span
        class="line-num"
      >
        33
      </span>
      <pre
        class="text"
      >
            
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-34"
    >
      <span
        class="line-num"
      >
        34
      </span>
      <pre
        class="text"
      >
        &lt;InbandEventStream
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-35"
    >
      <span
        class="line-num"
      >
        35
      </span>
      <pre
        class="text"
      >
         schemeIdUri="urn:dash-live:pingpong:2022"
      </pre>
    </div>
    <div
      class="manifest-line error"
      id="mpd-line-36"
    >
      <span
        class="line-num"
      >
        36
      </span>
      <pre
        class="text"
      >
         timescale="100"
      </pre>
      <p
        class="error-text"
      >
        InbandEventStream missing something
      </p>
    </div>
    <div
      class="manifest-line error"
      id="mpd-line-37"
    >
      <span
        class="line-num"
      >
        37
      </span>
      <pre
        class="text"
      >
         value="0"
      </pre>
    </div>
    <div
      class="manifest-line error"
      id="mpd-line-38"
    >
      <span
        class="line-num"
      >
        38
      </span>
      <pre
        class="text"
      >
         /&gt;
      </pre>
    </div>
    <div
      class="manifest-line error"
      id="mpd-line-39"
    >
      <span
        class="line-num"
      >
        39
      </span>
      <pre
        class="text"
      />
    </div>
    <div
      class="manifest-line"
      id="mpd-line-40"
    >
      <span
        class="line-num"
      >
        40
      </span>
      <pre
        class="text"
      >
          
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-41"
    >
      <span
        class="line-num"
      >
        41
      </span>
      <pre
        class="text"
      />
    </div>
    <div
      class="manifest-line"
      id="mpd-line-42"
    >
      <span
        class="line-num"
      >
        42
      </span>
      <pre
        class="text"
      >
                 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-43"
    >
      <span
        class="line-num"
      >
        43
      </span>
      <pre
        class="text"
      >
                 &lt;ContentComponent
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-44"
    >
      <span
        class="line-num"
      >
        44
      </span>
      <pre
        class="text"
      >
                     id="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-45"
    >
      <span
        class="line-num"
      >
        45
      </span>
      <pre
        class="text"
      >
                     contentType="video" /&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-46"
    >
      <span
        class="line-num"
      >
        46
      </span>
      <pre
        class="text"
      >
                       &lt;SegmentTemplate
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-47"
    >
      <span
        class="line-num"
      >
        47
      </span>
      <pre
        class="text"
      >
                           startNumber="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-48"
    >
      <span
        class="line-num"
      >
        48
      </span>
      <pre
        class="text"
      >
                           timescale="240"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-49"
    >
      <span
        class="line-num"
      >
        49
      </span>
      <pre
        class="text"
      >
                           duration="960"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-50"
    >
      <span
        class="line-num"
      >
        50
      </span>
      <pre
        class="text"
      >
                           initialization="$RepresentationID$/init.m4v"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-51"
    >
      <span
        class="line-num"
      >
        51
      </span>
      <pre
        class="text"
      >
                           media="$RepresentationID$/$Number$.m4v"&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-52"
    >
      <span
        class="line-num"
      >
        52
      </span>
      <pre
        class="text"
      >
                       &lt;/SegmentTemplate&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-53"
    >
      <span
        class="line-num"
      >
        53
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-54"
    >
      <span
        class="line-num"
      >
        54
      </span>
      <pre
        class="text"
      >
                       id="bbb_v7"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-55"
    >
      <span
        class="line-num"
      >
        55
      </span>
      <pre
        class="text"
      >
                       mimeType="video/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-56"
    >
      <span
        class="line-num"
      >
        56
      </span>
      <pre
        class="text"
      >
                       codecs="avc3.640028"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-57"
    >
      <span
        class="line-num"
      >
        57
      </span>
      <pre
        class="text"
      >
                         width="1920"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-58"
    >
      <span
        class="line-num"
      >
        58
      </span>
      <pre
        class="text"
      >
                         height="1080"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-59"
    >
      <span
        class="line-num"
      >
        59
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-60"
    >
      <span
        class="line-num"
      >
        60
      </span>
      <pre
        class="text"
      >
                       bandwidth="189666"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-61"
    >
      <span
        class="line-num"
      >
        61
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-62"
    >
      <span
        class="line-num"
      >
        62
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-63"
    >
      <span
        class="line-num"
      >
        63
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-64"
    >
      <span
        class="line-num"
      >
        64
      </span>
      <pre
        class="text"
      >
                       id="bbb_v6"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-65"
    >
      <span
        class="line-num"
      >
        65
      </span>
      <pre
        class="text"
      >
                       mimeType="video/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-66"
    >
      <span
        class="line-num"
      >
        66
      </span>
      <pre
        class="text"
      >
                       codecs="avc3.640028"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-67"
    >
      <span
        class="line-num"
      >
        67
      </span>
      <pre
        class="text"
      >
                         width="1920"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-68"
    >
      <span
        class="line-num"
      >
        68
      </span>
      <pre
        class="text"
      >
                         height="1080"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-69"
    >
      <span
        class="line-num"
      >
        69
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-70"
    >
      <span
        class="line-num"
      >
        70
      </span>
      <pre
        class="text"
      >
                       bandwidth="372594"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-71"
    >
      <span
        class="line-num"
      >
        71
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-72"
    >
      <span
        class="line-num"
      >
        72
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-73"
    >
      <span
        class="line-num"
      >
        73
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-74"
    >
      <span
        class="line-num"
      >
        74
      </span>
      <pre
        class="text"
      >
                       id="bbb_v5"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-75"
    >
      <span
        class="line-num"
      >
        75
      </span>
      <pre
        class="text"
      >
                       mimeType="video/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-76"
    >
      <span
        class="line-num"
      >
        76
      </span>
      <pre
        class="text"
      >
                       codecs="avc3.640028"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-77"
    >
      <span
        class="line-num"
      >
        77
      </span>
      <pre
        class="text"
      >
                         width="1920"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-78"
    >
      <span
        class="line-num"
      >
        78
      </span>
      <pre
        class="text"
      >
                         height="1080"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-79"
    >
      <span
        class="line-num"
      >
        79
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-80"
    >
      <span
        class="line-num"
      >
        80
      </span>
      <pre
        class="text"
      >
                       bandwidth="572786"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-81"
    >
      <span
        class="line-num"
      >
        81
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-82"
    >
      <span
        class="line-num"
      >
        82
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-83"
    >
      <span
        class="line-num"
      >
        83
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-84"
    >
      <span
        class="line-num"
      >
        84
      </span>
      <pre
        class="text"
      >
                       id="bbb_v4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-85"
    >
      <span
        class="line-num"
      >
        85
      </span>
      <pre
        class="text"
      >
                       mimeType="video/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-86"
    >
      <span
        class="line-num"
      >
        86
      </span>
      <pre
        class="text"
      >
                       codecs="avc3.640028"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-87"
    >
      <span
        class="line-num"
      >
        87
      </span>
      <pre
        class="text"
      >
                         width="1920"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-88"
    >
      <span
        class="line-num"
      >
        88
      </span>
      <pre
        class="text"
      >
                         height="1080"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-89"
    >
      <span
        class="line-num"
      >
        89
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-90"
    >
      <span
        class="line-num"
      >
        90
      </span>
      <pre
        class="text"
      >
                       bandwidth="659759"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-91"
    >
      <span
        class="line-num"
      >
        91
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-92"
    >
      <span
        class="line-num"
      >
        92
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-93"
    >
      <span
        class="line-num"
      >
        93
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-94"
    >
      <span
        class="line-num"
      >
        94
      </span>
      <pre
        class="text"
      >
                       id="bbb_v3"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-95"
    >
      <span
        class="line-num"
      >
        95
      </span>
      <pre
        class="text"
      >
                       mimeType="video/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-96"
    >
      <span
        class="line-num"
      >
        96
      </span>
      <pre
        class="text"
      >
                       codecs="avc3.640028"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-97"
    >
      <span
        class="line-num"
      >
        97
      </span>
      <pre
        class="text"
      >
                         width="1920"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-98"
    >
      <span
        class="line-num"
      >
        98
      </span>
      <pre
        class="text"
      >
                         height="1080"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-99"
    >
      <span
        class="line-num"
      >
        99
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-100"
    >
      <span
        class="line-num"
      >
        100
      </span>
      <pre
        class="text"
      >
                       bandwidth="1027100"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-101"
    >
      <span
        class="line-num"
      >
        101
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-102"
    >
      <span
        class="line-num"
      >
        102
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-103"
    >
      <span
        class="line-num"
      >
        103
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-104"
    >
      <span
        class="line-num"
      >
        104
      </span>
      <pre
        class="text"
      >
                       id="bbb_v2"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-105"
    >
      <span
        class="line-num"
      >
        105
      </span>
      <pre
        class="text"
      >
                       mimeType="video/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-106"
    >
      <span
        class="line-num"
      >
        106
      </span>
      <pre
        class="text"
      >
                       codecs="avc3.640028"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-107"
    >
      <span
        class="line-num"
      >
        107
      </span>
      <pre
        class="text"
      >
                         width="1920"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-108"
    >
      <span
        class="line-num"
      >
        108
      </span>
      <pre
        class="text"
      >
                         height="1080"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-109"
    >
      <span
        class="line-num"
      >
        109
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-110"
    >
      <span
        class="line-num"
      >
        110
      </span>
      <pre
        class="text"
      >
                       bandwidth="1807672"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-111"
    >
      <span
        class="line-num"
      >
        111
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-112"
    >
      <span
        class="line-num"
      >
        112
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-113"
    >
      <span
        class="line-num"
      >
        113
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-114"
    >
      <span
        class="line-num"
      >
        114
      </span>
      <pre
        class="text"
      >
                       id="bbb_v1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-115"
    >
      <span
        class="line-num"
      >
        115
      </span>
      <pre
        class="text"
      >
                       mimeType="video/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-116"
    >
      <span
        class="line-num"
      >
        116
      </span>
      <pre
        class="text"
      >
                       codecs="avc3.640028"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-117"
    >
      <span
        class="line-num"
      >
        117
      </span>
      <pre
        class="text"
      >
                         width="1920"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-118"
    >
      <span
        class="line-num"
      >
        118
      </span>
      <pre
        class="text"
      >
                         height="1080"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-119"
    >
      <span
        class="line-num"
      >
        119
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-120"
    >
      <span
        class="line-num"
      >
        120
      </span>
      <pre
        class="text"
      >
                       bandwidth="2953886"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-121"
    >
      <span
        class="line-num"
      >
        121
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-122"
    >
      <span
        class="line-num"
      >
        122
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt; 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-123"
    >
      <span
        class="line-num"
      >
        123
      </span>
      <pre
        class="text"
      >
               &lt;/AdaptationSet&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-124"
    >
      <span
        class="line-num"
      >
        124
      </span>
      <pre
        class="text"
      >
               &lt;AdaptationSet
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-125"
    >
      <span
        class="line-num"
      >
        125
      </span>
      <pre
        class="text"
      >
                 id="2"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-126"
    >
      <span
        class="line-num"
      >
        126
      </span>
      <pre
        class="text"
      >
                 mimeType="audio/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-127"
    >
      <span
        class="line-num"
      >
        127
      </span>
      <pre
        class="text"
      >
                 contentType="audio"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-128"
    >
      <span
        class="line-num"
      >
        128
      </span>
      <pre
        class="text"
      >
                 segmentAlignment="true"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-129"
    >
      <span
        class="line-num"
      >
        129
      </span>
      <pre
        class="text"
      >
                 startWithSAP=""
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-130"
    >
      <span
        class="line-num"
      >
        130
      </span>
      <pre
        class="text"
      >
                 &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-131"
    >
      <span
        class="line-num"
      >
        131
      </span>
      <pre
        class="text"
      >
                 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-132"
    >
      <span
        class="line-num"
      >
        132
      </span>
      <pre
        class="text"
      >
                 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-133"
    >
      <span
        class="line-num"
      >
        133
      </span>
      <pre
        class="text"
      >
                 &lt;ContentComponent
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-134"
    >
      <span
        class="line-num"
      >
        134
      </span>
      <pre
        class="text"
      >
                     id="2"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-135"
    >
      <span
        class="line-num"
      >
        135
      </span>
      <pre
        class="text"
      >
                     contentType="audio" /&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-136"
    >
      <span
        class="line-num"
      >
        136
      </span>
      <pre
        class="text"
      >
                   &lt;Role
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-137"
    >
      <span
        class="line-num"
      >
        137
      </span>
      <pre
        class="text"
      >
                     schemeIdUri="urn:mpeg:dash:role:2011"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-138"
    >
      <span
        class="line-num"
      >
        138
      </span>
      <pre
        class="text"
      >
                     value="main"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-139"
    >
      <span
        class="line-num"
      >
        139
      </span>
      <pre
        class="text"
      >
                   /&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-140"
    >
      <span
        class="line-num"
      >
        140
      </span>
      <pre
        class="text"
      >
                 &lt;AudioChannelConfiguration
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-141"
    >
      <span
        class="line-num"
      >
        141
      </span>
      <pre
        class="text"
      >
                     schemeIdUri="urn:mpeg:dash:23003:3:audio_channel_configuration:2011"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-142"
    >
      <span
        class="line-num"
      >
        142
      </span>
      <pre
        class="text"
      >
                     value="2" /&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-143"
    >
      <span
        class="line-num"
      >
        143
      </span>
      <pre
        class="text"
      >
                       &lt;SegmentTemplate
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-144"
    >
      <span
        class="line-num"
      >
        144
      </span>
      <pre
        class="text"
      >
                           startNumber="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-145"
    >
      <span
        class="line-num"
      >
        145
      </span>
      <pre
        class="text"
      >
                           timescale="44100"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-146"
    >
      <span
        class="line-num"
      >
        146
      </span>
      <pre
        class="text"
      >
                           duration="176399"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-147"
    >
      <span
        class="line-num"
      >
        147
      </span>
      <pre
        class="text"
      >
                           initialization="$RepresentationID$/init.m4a"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-148"
    >
      <span
        class="line-num"
      >
        148
      </span>
      <pre
        class="text"
      >
                           media="$RepresentationID$/$Number$.m4a"&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-149"
    >
      <span
        class="line-num"
      >
        149
      </span>
      <pre
        class="text"
      >
                       &lt;/SegmentTemplate&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-150"
    >
      <span
        class="line-num"
      >
        150
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-151"
    >
      <span
        class="line-num"
      >
        151
      </span>
      <pre
        class="text"
      >
                       id="bbb_a1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-152"
    >
      <span
        class="line-num"
      >
        152
      </span>
      <pre
        class="text"
      >
                       mimeType="audio/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-153"
    >
      <span
        class="line-num"
      >
        153
      </span>
      <pre
        class="text"
      >
                       codecs="mp4a.40.2"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-154"
    >
      <span
        class="line-num"
      >
        154
      </span>
      <pre
        class="text"
      >
                           audioSamplingRate="44100"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-155"
    >
      <span
        class="line-num"
      >
        155
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-156"
    >
      <span
        class="line-num"
      >
        156
      </span>
      <pre
        class="text"
      >
                       bandwidth="98247"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-157"
    >
      <span
        class="line-num"
      >
        157
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-158"
    >
      <span
        class="line-num"
      >
        158
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt; 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-159"
    >
      <span
        class="line-num"
      >
        159
      </span>
      <pre
        class="text"
      >
               &lt;/AdaptationSet&gt; 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-160"
    >
      <span
        class="line-num"
      >
        160
      </span>
      <pre
        class="text"
      >
           &lt;/Period&gt; 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-161"
    >
      <span
        class="line-num"
      >
        161
      </span>
      <pre
        class="text"
      >
        &lt;/MPD&gt;
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Manifest component > matches snapshot for manifest with no errors 1`] = `
<DocumentFragment>
  <div
    class="card"
    id="manifest-text"
  >
    <div
      class="manifest-line"
      id="mpd-line-1"
    >
      <span
        class="line-num"
      >
        1
      </span>
      <pre
        class="text"
      >
        &lt;?xml version="1.0" encoding="UTF-8"?&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-2"
    >
      <span
        class="line-num"
      >
        2
      </span>
      <pre
        class="text"
      >
        &lt;MPD xmlns="urn:mpeg:dash:schema:mpd:2011"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-3"
    >
      <span
        class="line-num"
      >
        3
      </span>
      <pre
        class="text"
      >
             xmlns:cenc="urn:mpeg:cenc:2013"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-4"
    >
      <span
        class="line-num"
      >
        4
      </span>
      <pre
        class="text"
      >
             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-5"
    >
      <span
        class="line-num"
      >
        5
      </span>
      <pre
        class="text"
      >
             xsi:schemaLocation="urn:mpeg:dash:schema:mpd:2011 DASH-MPD.xsd"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-6"
    >
      <span
        class="line-num"
      >
        6
      </span>
      <pre
        class="text"
      >
             publishTime="2025-01-14T07:37:34Z"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-7"
    >
      <span
        class="line-num"
      >
        7
      </span>
      <pre
        class="text"
      >
             id="bbb"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-8"
    >
      <span
        class="line-num"
      >
        8
      </span>
      <pre
        class="text"
      >
            type="static"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-9"
    >
      <span
        class="line-num"
      >
        9
      </span>
      <pre
        class="text"
      >
            mediaPresentationDuration="PT9M51.458S"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-10"
    >
      <span
        class="line-num"
      >
        10
      </span>
      <pre
        class="text"
      >
          profiles="urn:mpeg:dash:profile:isoff-live:2011,urn:dvb:dash:profile:dvbdash:2014"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-11"
    >
      <span
        class="line-num"
      >
        11
      </span>
      <pre
        class="text"
      >
          minBufferTime="PT1.5S"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-12"
    >
      <span
        class="line-num"
      >
        12
      </span>
      <pre
        class="text"
      >
        &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-13"
    >
      <span
        class="line-num"
      >
        13
      </span>
      <pre
        class="text"
      >
         &lt;ProgramInformation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-14"
    >
      <span
        class="line-num"
      >
        14
      </span>
      <pre
        class="text"
      >
          &lt;Title&gt;Big Buck Bunny &lt;/Title&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-15"
    >
      <span
        class="line-num"
      >
        15
      </span>
      <pre
        class="text"
      >
         &lt;/ProgramInformation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-16"
    >
      <span
        class="line-num"
      >
        16
      </span>
      <pre
        class="text"
      >
         &lt;Location&gt;http://localhost:8765/dash/vod/bbb/hand_made.mpd&lt;/Location&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-17"
    >
      <span
        class="line-num"
      >
        17
      </span>
      <pre
        class="text"
      >
           &lt;Period start="PT0S" id="p0"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-18"
    >
      <span
        class="line-num"
      >
        18
      </span>
      <pre
        class="text"
      >
           &gt;&lt;BaseURL&gt;http://localhost:8765/dash/vod/bbb/&lt;/BaseURL&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-19"
    >
      <span
        class="line-num"
      >
        19
      </span>
      <pre
        class="text"
      >
             
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-20"
    >
      <span
        class="line-num"
      >
        20
      </span>
      <pre
        class="text"
      >
               &lt;AdaptationSet
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-21"
    >
      <span
        class="line-num"
      >
        21
      </span>
      <pre
        class="text"
      >
                 id="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-22"
    >
      <span
        class="line-num"
      >
        22
      </span>
      <pre
        class="text"
      >
                 mimeType="video/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-23"
    >
      <span
        class="line-num"
      >
        23
      </span>
      <pre
        class="text"
      >
                 contentType="video"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-24"
    >
      <span
        class="line-num"
      >
        24
      </span>
      <pre
        class="text"
      >
                 segmentAlignment="true"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-25"
    >
      <span
        class="line-num"
      >
        25
      </span>
      <pre
        class="text"
      >
                 startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-26"
    >
      <span
        class="line-num"
      >
        26
      </span>
      <pre
        class="text"
      >
                   maxWidth="1920"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-27"
    >
      <span
        class="line-num"
      >
        27
      </span>
      <pre
        class="text"
      >
                   maxHeight="1080"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-28"
    >
      <span
        class="line-num"
      >
        28
      </span>
      <pre
        class="text"
      >
                   maxFrameRate="24"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-29"
    >
      <span
        class="line-num"
      >
        29
      </span>
      <pre
        class="text"
      >
                   par="16:9"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-30"
    >
      <span
        class="line-num"
      >
        30
      </span>
      <pre
        class="text"
      >
                 &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-31"
    >
      <span
        class="line-num"
      >
        31
      </span>
      <pre
        class="text"
      >
                 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-32"
    >
      <span
        class="line-num"
      >
        32
      </span>
      <pre
        class="text"
      >
          
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-33"
    >
      <span
        class="line-num"
      >
        33
      </span>
      <pre
        class="text"
      >
            
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-34"
    >
      <span
        class="line-num"
      >
        34
      </span>
      <pre
        class="text"
      >
        &lt;InbandEventStream
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-35"
    >
      <span
        class="line-num"
      >
        35
      </span>
      <pre
        class="text"
      >
         schemeIdUri="urn:dash-live:pingpong:2022"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-36"
    >
      <span
        class="line-num"
      >
        36
      </span>
      <pre
        class="text"
      >
         timescale="100"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-37"
    >
      <span
        class="line-num"
      >
        37
      </span>
      <pre
        class="text"
      >
         value="0"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-38"
    >
      <span
        class="line-num"
      >
        38
      </span>
      <pre
        class="text"
      >
         /&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-39"
    >
      <span
        class="line-num"
      >
        39
      </span>
      <pre
        class="text"
      />
    </div>
    <div
      class="manifest-line"
      id="mpd-line-40"
    >
      <span
        class="line-num"
      >
        40
      </span>
      <pre
        class="text"
      >
          
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-41"
    >
      <span
        class="line-num"
      >
        41
      </span>
      <pre
        class="text"
      />
    </div>
    <div
      class="manifest-line"
      id="mpd-line-42"
    >
      <span
        class="line-num"
      >
        42
      </span>
      <pre
        class="text"
      >
                 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-43"
    >
      <span
        class="line-num"
      >
        43
      </span>
      <pre
        class="text"
      >
                 &lt;ContentComponent
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-44"
    >
      <span
        class="line-num"
      >
        44
      </span>
      <pre
        class="text"
      >
                     id="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-45"
    >
      <span
        class="line-num"
      >
        45
      </span>
      <pre
        class="text"
      >
                     contentType="video" /&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-46"
    >
      <span
        class="line-num"
      >
        46
      </span>
      <pre
        class="text"
      >
                       &lt;SegmentTemplate
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-47"
    >
      <span
        class="line-num"
      >
        47
      </span>
      <pre
        class="text"
      >
                           startNumber="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-48"
    >
      <span
        class="line-num"
      >
        48
      </span>
      <pre
        class="text"
      >
                           timescale="240"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-49"
    >
      <span
        class="line-num"
      >
        49
      </span>
      <pre
        class="text"
      >
                           duration="960"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-50"
    >
      <span
        class="line-num"
      >
        50
      </span>
      <pre
        class="text"
      >
                           initialization="$RepresentationID$/init.m4v"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-51"
    >
      <span
        class="line-num"
      >
        51
      </span>
      <pre
        class="text"
      >
                           media="$RepresentationID$/$Number$.m4v"&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-52"
    >
      <span
        class="line-num"
      >
        52
      </span>
      <pre
        class="text"
      >
                       &lt;/SegmentTemplate&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-53"
    >
      <span
        class="line-num"
      >
        53
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-54"
    >
      <span
        class="line-num"
      >
        54
      </span>
      <pre
        class="text"
      >
                       id="bbb_v7"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-55"
    >
      <span
        class="line-num"
      >
        55
      </span>
      <pre
        class="text"
      >
                       mimeType="video/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-56"
    >
      <span
        class="line-num"
      >
        56
      </span>
      <pre
        class="text"
      >
                       codecs="avc3.640028"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-57"
    >
      <span
        class="line-num"
      >
        57
      </span>
      <pre
        class="text"
      >
                         width="1920"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-58"
    >
      <span
        class="line-num"
      >
        58
      </span>
      <pre
        class="text"
      >
                         height="1080"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-59"
    >
      <span
        class="line-num"
      >
        59
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-60"
    >
      <span
        class="line-num"
      >
        60
      </span>
      <pre
        class="text"
      >
                       bandwidth="189666"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-61"
    >
      <span
        class="line-num"
      >
        61
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-62"
    >
      <span
        class="line-num"
      >
        62
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-63"
    >
      <span
        class="line-num"
      >
        63
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-64"
    >
      <span
        class="line-num"
      >
        64
      </span>
      <pre
        class="text"
      >
                       id="bbb_v6"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-65"
    >
      <span
        class="line-num"
      >
        65
      </span>
      <pre
        class="text"
      >
                       mimeType="video/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-66"
    >
      <span
        class="line-num"
      >
        66
      </span>
      <pre
        class="text"
      >
                       codecs="avc3.640028"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-67"
    >
      <span
        class="line-num"
      >
        67
      </span>
      <pre
        class="text"
      >
                         width="1920"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-68"
    >
      <span
        class="line-num"
      >
        68
      </span>
      <pre
        class="text"
      >
                         height="1080"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-69"
    >
      <span
        class="line-num"
      >
        69
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-70"
    >
      <span
        class="line-num"
      >
        70
      </span>
      <pre
        class="text"
      >
                       bandwidth="372594"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-71"
    >
      <span
        class="line-num"
      >
        71
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-72"
    >
      <span
        class="line-num"
      >
        72
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-73"
    >
      <span
        class="line-num"
      >
        73
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-74"
    >
      <span
        class="line-num"
      >
        74
      </span>
      <pre
        class="text"
      >
                       id="bbb_v5"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-75"
    >
      <span
        class="line-num"
      >
        75
      </span>
      <pre
        class="text"
      >
                       mimeType="video/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-76"
    >
      <span
        class="line-num"
      >
        76
      </span>
      <pre
        class="text"
      >
                       codecs="avc3.640028"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-77"
    >
      <span
        class="line-num"
      >
        77
      </span>
      <pre
        class="text"
      >
                         width="1920"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-78"
    >
      <span
        class="line-num"
      >
        78
      </span>
      <pre
        class="text"
      >
                         height="1080"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-79"
    >
      <span
        class="line-num"
      >
        79
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-80"
    >
      <span
        class="line-num"
      >
        80
      </span>
      <pre
        class="text"
      >
                       bandwidth="572786"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-81"
    >
      <span
        class="line-num"
      >
        81
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-82"
    >
      <span
        class="line-num"
      >
        82
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-83"
    >
      <span
        class="line-num"
      >
        83
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-84"
    >
      <span
        class="line-num"
      >
        84
      </span>
      <pre
        class="text"
      >
                       id="bbb_v4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-85"
    >
      <span
        class="line-num"
      >
        85
      </span>
      <pre
        class="text"
      >
                       mimeType="video/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-86"
    >
      <span
        class="line-num"
      >
        86
      </span>
      <pre
        class="text"
      >
                       codecs="avc3.640028"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-87"
    >
      <span
        class="line-num"
      >
        87
      </span>
      <pre
        class="text"
      >
                         width="1920"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-88"
    >
      <span
        class="line-num"
      >
        88
      </span>
      <pre
        class="text"
      >
                         height="1080"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-89"
    >
      <span
        class="line-num"
      >
        89
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-90"
    >
      <span
        class="line-num"
      >
        90
      </span>
      <pre
        class="text"
      >
                       bandwidth="659759"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-91"
    >
      <span
        class="line-num"
      >
        91
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-92"
    >
      <span
        class="line-num"
      >
        92
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-93"
    >
      <span
        class="line-num"
      >
        93
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-94"
    >
      <span
        class="line-num"
      >
        94
      </span>
      <pre
        class="text"
      >
                       id="bbb_v3"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-95"
    >
      <span
        class="line-num"
      >
        95
      </span>
      <pre
        class="text"
      >
                       mimeType="video/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-96"
    >
      <span
        class="line-num"
      >
        96
      </span>
      <pre
        class="text"
      >
                       codecs="avc3.640028"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-97"
    >
      <span
        class="line-num"
      >
        97
      </span>
      <pre
        class="text"
      >
                         width="1920"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-98"
    >
      <span
        class="line-num"
      >
        98
      </span>
      <pre
        class="text"
      >
                         height="1080"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-99"
    >
      <span
        class="line-num"
      >
        99
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-100"
    >
      <span
        class="line-num"
      >
        100
      </span>
      <pre
        class="text"
      >
                       bandwidth="1027100"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-101"
    >
      <span
        class="line-num"
      >
        101
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-102"
    >
      <span
        class="line-num"
      >
        102
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-103"
    >
      <span
        class="line-num"
      >
        103
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-104"
    >
      <span
        class="line-num"
      >
        104
      </span>
      <pre
        class="text"
      >
                       id="bbb_v2"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-105"
    >
      <span
        class="line-num"
      >
        105
      </span>
      <pre
        class="text"
      >
                       mimeType="video/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-106"
    >
      <span
        class="line-num"
      >
        106
      </span>
      <pre
        class="text"
      >
                       codecs="avc3.640028"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-107"
    >
      <span
        class="line-num"
      >
        107
      </span>
      <pre
        class="text"
      >
                         width="1920"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-108"
    >
      <span
        class="line-num"
      >
        108
      </span>
      <pre
        class="text"
      >
                         height="1080"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-109"
    >
      <span
        class="line-num"
      >
        109
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-110"
    >
      <span
        class="line-num"
      >
        110
      </span>
      <pre
        class="text"
      >
                       bandwidth="1807672"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-111"
    >
      <span
        class="line-num"
      >
        111
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-112"
    >
      <span
        class="line-num"
      >
        112
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-113"
    >
      <span
        class="line-num"
      >
        113
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-114"
    >
      <span
        class="line-num"
      >
        114
      </span>
      <pre
        class="text"
      >
                       id="bbb_v1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-115"
    >
      <span
        class="line-num"
      >
        115
      </span>
      <pre
        class="text"
      >
                       mimeType="video/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-116"
    >
      <span
        class="line-num"
      >
        116
      </span>
      <pre
        class="text"
      >
                       codecs="avc3.640028"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-117"
    >
      <span
        class="line-num"
      >
        117
      </span>
      <pre
        class="text"
      >
                         width="1920"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-118"
    >
      <span
        class="line-num"
      >
        118
      </span>
      <pre
        class="text"
      >
                         height="1080"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-119"
    >
      <span
        class="line-num"
      >
        119
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-120"
    >
      <span
        class="line-num"
      >
        120
      </span>
      <pre
        class="text"
      >
                       bandwidth="2953886"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-121"
    >
      <span
        class="line-num"
      >
        121
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-122"
    >
      <span
        class="line-num"
      >
        122
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt; 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-123"
    >
      <span
        class="line-num"
      >
        123
      </span>
      <pre
        class="text"
      >
               &lt;/AdaptationSet&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-124"
    >
      <span
        class="line-num"
      >
        124
      </span>
      <pre
        class="text"
      >
               &lt;AdaptationSet
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-125"
    >
      <span
        class="line-num"
      >
        125
      </span>
      <pre
        class="text"
      >
                 id="2"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-126"
    >
      <span
        class="line-num"
      >
        126
      </span>
      <pre
        class="text"
      >
                 mimeType="audio/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-127"
    >
      <span
        class="line-num"
      >
        127
      </span>
      <pre
        class="text"
      >
                 contentType="audio"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-128"
    >
      <span
        class="line-num"
      >
        128
      </span>
      <pre
        class="text"
      >
                 segmentAlignment="true"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-129"
    >
      <span
        class="line-num"
      >
        129
      </span>
      <pre
        class="text"
      >
                 startWithSAP=""
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-130"
    >
      <span
        class="line-num"
      >
        130
      </span>
      <pre
        class="text"
      >
                 &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-131"
    >
      <span
        class="line-num"
      >
        131
      </span>
      <pre
        class="text"
      >
                 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-132"
    >
      <span
        class="line-num"
      >
        132
      </span>
      <pre
        class="text"
      >
                 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-133"
    >
      <span
        class="line-num"
      >
        133
      </span>
      <pre
        class="text"
      >
                 &lt;ContentComponent
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-134"
    >
      <span
        class="line-num"
      >
        134
      </span>
      <pre
        class="text"
      >
                     id="2"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-135"
    >
      <span
        class="line-num"
      >
        135
      </span>
      <pre
        class="text"
      >
                     contentType="audio" /&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-136"
    >
      <span
        class="line-num"
      >
        136
      </span>
      <pre
        class="text"
      >
                   &lt;Role
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-137"
    >
      <span
        class="line-num"
      >
        137
      </span>
      <pre
        class="text"
      >
                     schemeIdUri="urn:mpeg:dash:role:2011"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-138"
    >
      <span
        class="line-num"
      >
        138
      </span>
      <pre
        class="text"
      >
                     value="main"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-139"
    >
      <span
        class="line-num"
      >
        139
      </span>
      <pre
        class="text"
      >
                   /&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-140"
    >
      <span
        class="line-num"
      >
        140
      </span>
      <pre
        class="text"
      >
                 &lt;AudioChannelConfiguration
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-141"
    >
      <span
        class="line-num"
      >
        141
      </span>
      <pre
        class="text"
      >
                     schemeIdUri="urn:mpeg:dash:23003:3:audio_channel_configuration:2011"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-142"
    >
      <span
        class="line-num"
      >
        142
      </span>
      <pre
        class="text"
      >
                     value="2" /&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-143"
    >
      <span
        class="line-num"
      >
        143
      </span>
      <pre
        class="text"
      >
                       &lt;SegmentTemplate
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-144"
    >
      <span
        class="line-num"
      >
        144
      </span>
      <pre
        class="text"
      >
                           startNumber="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-145"
    >
      <span
        class="line-num"
      >
        145
      </span>
      <pre
        class="text"
      >
                           timescale="44100"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-146"
    >
      <span
        class="line-num"
      >
        146
      </span>
      <pre
        class="text"
      >
                           duration="176399"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-147"
    >
      <span
        class="line-num"
      >
        147
      </span>
      <pre
        class="text"
      >
                           initialization="$RepresentationID$/init.m4a"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-148"
    >
      <span
        class="line-num"
      >
        148
      </span>
      <pre
        class="text"
      >
                           media="$RepresentationID$/$Number$.m4a"&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-149"
    >
      <span
        class="line-num"
      >
        149
      </span>
      <pre
        class="text"
      >
                       &lt;/SegmentTemplate&gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-150"
    >
      <span
        class="line-num"
      >
        150
      </span>
      <pre
        class="text"
      >
                   &lt;Representation
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-151"
    >
      <span
        class="line-num"
      >
        151
      </span>
      <pre
        class="text"
      >
                       id="bbb_a1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-152"
    >
      <span
        class="line-num"
      >
        152
      </span>
      <pre
        class="text"
      >
                       mimeType="audio/mp4"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-153"
    >
      <span
        class="line-num"
      >
        153
      </span>
      <pre
        class="text"
      >
                       codecs="mp4a.40.2"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-154"
    >
      <span
        class="line-num"
      >
        154
      </span>
      <pre
        class="text"
      >
                           audioSamplingRate="44100"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-155"
    >
      <span
        class="line-num"
      >
        155
      </span>
      <pre
        class="text"
      >
                       startWithSAP="1"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-156"
    >
      <span
        class="line-num"
      >
        156
      </span>
      <pre
        class="text"
      >
                       bandwidth="98247"
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-157"
    >
      <span
        class="line-num"
      >
        157
      </span>
      <pre
        class="text"
      >
                   &gt;
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-158"
    >
      <span
        class="line-num"
      >
        158
      </span>
      <pre
        class="text"
      >
                   &lt;/Representation&gt; 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-159"
    >
      <span
        class="line-num"
      >
        159
      </span>
      <pre
        class="text"
      >
               &lt;/AdaptationSet&gt; 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-160"
    >
      <span
        class="line-num"
      >
        160
      </span>
      <pre
        class="text"
      >
           &lt;/Period&gt; 
      </pre>
    </div>
    <div
      class="manifest-line"
      id="mpd-line-161"
    >
      <span
        class="line-num"
      >
        161
      </span>
      <pre
        class="text"
      >
        &lt;/MPD&gt;
      </pre>
    </div>
  </div>
</DocumentFragment>
`;
